samples/_failures_safe/1761729768_e367ae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a17a9ac.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_8a17a9ac.c:170:55: error: expected ‘)’ at end of input
  170 |     if (parser->current_token.type == TOKEN_IDENTIFIER
      |        ~                                              ^
      |                                                       )
./samples/SAFE/__tmp_8a17a9ac.c:170:5: error: expected declaration or statement at end of input
  170 |     if (parser->current_token.type == TOKEN_IDENTIFIER
      |     ^~
